# flext

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  bootstrap.sh  build-max-darwin.sh  build-max-msvc.bat  build-pd-bcc.bat  build-pd-cygwin.sh  build-pd-darwin.sh  build-pd-linux.sh  build-pd-mingw.bat  build-pd-msvc.bat  build.bat  build.sh  build.txt  buildext.bat  buildext.sh  changes.txt  config-max-darwin.txt  config-max-msvc.txt  config-pd-bcc.txt  config-pd-cygwin.txt  config-pd-darwin.txt  config-pd-linux.txt  config-pd-mingw.txt  config-pd-msvc.txt  configure.ac  flext.cw  flext.doxy  flext.dsp  flext.mcp  flext.mpw  (+20 more)
buildsys/: bmake-flext.inc  bmake-sub.mak  bmake.inc  bmake.mak  build-cygwin.sh  build-gcc.sh  build-icc.sh  build-msvc.bat  config-mac-max-gcc.txt  config-mac-pd-gcc.txt  gnumake-ext.inc  gnumake-flext.inc  gnumake-sub.mak  gnumake.inc  gnumake.mak  nmake-sub.mak  nmake.inc  nmake.mak  readme.txt  targets-ext.inc  targets-flext.inc  targets.inc  version.inc
buildsys/lnx/: gnumake-gcc-ext.inc  gnumake-gcc-flext.inc  gnumake-gcc.inc  gnumake-icc-ext.inc  gnumake-icc-flext.inc  gnumake-icc.inc
buildsys/lnx/pd/: config-gcc.def  config-icc.def  gnumake-gcc-flext.inc  gnumake-gcc.inc  gnumake-icc-ext.inc  gnumake-icc.inc
buildsys/mac/: gnumake-gcc-ext.inc  gnumake-gcc-flext.inc  gnumake-gcc-targets.inc  gnumake-gcc.inc  make-gcc.inc
buildsys/mac/max/: config-gcc.def  (+3 more)
buildsys/win/: bmake-bcc-ext.inc  bmake-bcc-flext.inc  bmake-bcc.inc  gnumake-cygwin-ext.inc  gnumake-cygwin-flext.inc  gnumake-cygwin.inc  gnumake-mingw-ext.inc  gnumake-mingw-flext.inc  gnumake-mingw.inc  make-bcc-ext.inc  make-bcc.inc  make-cygwin.inc  make-mingw.inc  make-msvc-ext.inc  make-msvc-flext.inc  make-msvc.inc  nmake-msvc-ext.inc  nmake-msvc-flext.inc  nmake-msvc-shlib.inc  nmake-msvc.inc
examples/source/: henon.cpp
flext.pbproj/: project.pbxproj  thomas.pbxuser
flext.xcode/: project.pbxproj
flext.xcodeproj/: project.pbxproj
source/: Makefile.am  flatom.cpp  flatom_app.cpp  flatom_part.cpp  flatom_pr.cpp  flattr.cpp  flattr_ed.cpp  flbase.cpp  flbase.h  flbind.cpp  flbuf.cpp  flclass.h  flcontainers.h  flcwmax-thr.h  flcwmax-x-thr.h  flcwmax-x.h  flcwmax.h  flcwpd-x-thr.h  flcwpd-x.h  fldefs.h  fldefs_attradd.h  fldefs_attrcb.h  fldefs_attrvar.h  fldefs_hdr.h  fldefs_methadd.h  fldefs_methbind.h  fldefs_methcall.h  fldefs_methcb.h  fldefs_meththr.h  fldefs_setup.h  fldoxygen.h  fldsp.cpp  fldsp.h  flext  flext.cpp  flext.h  flfeatures.h  flinternal.h  flitem.cpp  fllib.cpp  (+24 more)
source/lockfree/: atomic_int.hpp  atomic_ptr.hpp  cas.hpp  prefix.hpp
tutorial/: Makefile.am  build-bcc.bat  build-pd-bcc.bat  build-pd-cygwin.sh  build-pd-darwin.sh  build-pd-linux.sh  build-pd-msvc.bat  build.bat  build.sh  common.mk  config-pd-bcc.txt  config-pd-cygwin.txt  config-pd-darwin.txt  config-pd-linux.txt  config-pd-msvc.txt  license.txt  make-sub.pd-msvc  makefile-inc.bcc  makefile.pd-bcc  makefile.pd-cygwin  makefile.pd-darwin  makefile.pd-linux  makefile.pd-msvc  readme.txt  tutorial.dsw
tutorial/1_simple1/: Makefile.am
tutorial/1_simple2/: Makefile.am
tutorial/1_simple3/: Makefile.am
tutorial/2_adv1/: Makefile.am
tutorial/2_adv2/: Makefile.am
tutorial/2_adv3/: Makefile.am
tutorial/3_attr1/: Makefile.am
tutorial/3_attr2/: Makefile.am
tutorial/3_attr3/: Makefile.am
tutorial/4_bind1/: Makefile.am
tutorial/4_buffer1/: Makefile.am
tutorial/4_timer1/: Makefile.am
tutorial/5_signal1/: Makefile.am  main.cpp
tutorial/5_signal2/: Makefile.am  main.cpp
tutorial/6_lib1/: Makefile.am
tutorial/7_thread1/: Makefile.am
tutorial/7_thread2/: Makefile.am  main.cpp
tutorial/8_sndobj1/: Makefile.am
tutorial/8_stk1/: Makefile.am
tutorial/8_stk2/: Makefile.am
tutorial/adv1/: Makefile.am  adv1.cw  adv1.dsp  main.cpp  make.mpw  makefile.bcc
tutorial/adv2/: Makefile.am  adv2.cw  adv2.dsp  main.cpp
tutorial/adv3/: Makefile.am  adv3.cw  adv3.dsp  main.cpp
tutorial/attr1/: Makefile.am  attr1.cw  attr1.dsp  main.cpp  make.mpw
tutorial/attr2/: Makefile.am  attr2.cw  attr2.dsp  main.cpp
tutorial/attr3/: Makefile.am  attr3.cw  attr3.dsp  main.cpp
tutorial/bind1/: Makefile.am  bind1.dsp  main.cpp
tutorial/buffer1/: Makefile.am  buffer1.dsp  main.cpp
tutorial/lib1/: Makefile.am  lib1.cw  lib1.dsp  main.cpp
tutorial/maxmsp/: ex-adv1.maxpat  ex-adv1.pat  ex-adv2.maxpat  ex-adv3.maxpat  ex-attr1.maxpat  ex-attr2.maxpat  ex-attr2.pat  ex-attr3.maxpat  ex-bind1.maxpat  ex-bind1.pat  ex-buffer1.maxpat  ex-buffer1.pat  ex-lib1.maxpat  ex-signal1.maxpat  ex-signal1.pat  ex-signal2.maxpat  ex-signal2.pat  ex-simple1.maxpat  ex-simple1.pat  ex-simple2.maxpat  ex-simple2.pat  ex-simple3.maxpat  ex-simple3.pat  ex-thread1.maxpat  ex-thread2.maxpat  ex-thread2.pat  ex-timer1.maxpat
tutorial/pd/: ex-adv1.pd  ex-adv2.pd  ex-adv3.pd  ex-attr1.pd  ex-attr2.pd  ex-attr3.pd  ex-bind1.pd  ex-buffer1.pd  ex-lib1.pd  ex-signal1.pd  ex-signal2.pd  ex-simple1.pd  ex-simple2.pd  ex-simple3.pd  ex-sndobj1.pd  ex-stk1.pd  ex-stk2.pd  ex-thread1.pd  ex-thread2.pd  ex-timer1.pd  test.pd  test.sh
tutorial/signal1/: Makefile.am  main.cpp  make.mpw  makefile.bcc  makefile.pd-cygwin  package.txt  signal1.cw  signal1.dsp
tutorial/signal2/: Makefile.am  main.cpp  make.mpw  makefile.bcc  package.txt  signal2.cw  signal2.dsp
tutorial/simple1/: Makefile.am  main.cpp  make.mpw  makefile.bcc  simple1.cw  simple1.dsp
tutorial/simple2/: Makefile.am  main.cpp  make.mpw  makefile.bcc  simple2.cw  simple2.dsp
tutorial/simple3/: Makefile.am  main.cpp  make.mpw  makefile.bcc  simple3.cw  simple3.dsp
tutorial/sndobj1/: Makefile.am  main.cpp  package.txt  sndobj1.dsp
tutorial/stk1/: Makefile.am  main.cpp  package.txt  stk1.dsp
tutorial/stk2/: Makefile.am  main.cpp  package.txt  stk2.dsp
tutorial/thread1/: Makefile.am  main.cpp  thread1.cw  thread1.dsp  thread1.vcproj
tutorial/thread2/: Makefile.am  main.cpp  thread2.cw  thread2.dsp  thread2.vcproj
tutorial/timer1/: Makefile.am  main.cpp  timer1.cw  timer1.dsp
(+31 files in other folders)
