#
# automake template
# added by tim blechmann
#

SUBDIRS = \
	1_simple1 \
	1_simple2 \
	1_simple3 \
	2_adv1 \
	2_adv2 \
	2_adv3 \
	3_attr1 \
	3_attr2 \
	3_attr3 \
	4_bind1 \
	4_buffer1 \
	4_timer1 \
	5_signal1 \
	5_signal2 \
	6_lib1 \
	7_thread1 \
	7_thread2 \
	pd \
	maxmsp

#	8_sndobj1 \
#	8_stk1 \
#	8_stk2 \
#

EXTRA_DIST = \
	readme.txt \
	gpl.txt

DIST_SUBDIRS = pd \
	maxmsp \
	1_simple1 \
	1_simple2 \
	1_simple3 \
	2_adv1 \
	2_adv2 \
	2_adv3 \
	3_attr1 \
	3_attr2 \
	3_attr3 \
	4_bind1 \
	4_buffer1 \
	4_timer1 \
	5_signal1 \
	5_signal2 \
	6_lib1 \
	7_thread1 \
	7_thread2 \
	pd \
	maxmsp

#	8_sndobj1 \
#	8_stk1 \
#	8_stk2 \
#